Freedom Sanbox Ant Deploy/src/objects/CashFlow_Projection__c.object
<CustomObject>
    <fields>
        <fullName>Business_Income__c</fullName>
        <label>Business Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Flow Projection</relationshipLabel>
        <relationshipName>Cash_Flow_Projection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Family_care__c</fullName>
        <label>Family care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Healthcare__c</fullName>
        <label>Healthcare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <label>Housing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Repayments_EMI__c</fullName>
        <label>Loan Repayments (EMI)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension_Income__c</fullName>
        <label>Pension Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <label>Personal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recreation_Entertainment__c</fullName>
        <label>Recreation &amp; Entertainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Income__c</fullName>
        <label>Rental Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Income__c</fullName>
        <label>Salary Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saving__c</fullName>
        <label>Saving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilities__c</fullName>
        <label>Utilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isProjectionDisplayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProjectionDisplayed</label>
        <type>Checkbox</type>
    </fields>
    <label>CashFlow Projection</label>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>CashFlow Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Flow Projection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>